WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121668
[ATK][WTR] accessibility/aria-invalid.html times out
https://bugs.webkit.org/show_bug.cgi?id=121668
Summary
[ATK][WTR] accessibility/aria-invalid.html times out
Denis Nomiyama (dnomi)
Reported
2013-09-20 03:16:22 PDT
The test times out on GTK WTR:
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=aria-invalid.html
Attachments
Patch
(3.72 KB, patch)
2013-09-20 07:28 PDT
,
Denis Nomiyama (dnomi)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Denis Nomiyama (dnomi)
Comment 1
2013-09-20 07:28:09 PDT
Created
attachment 212162
[details]
Patch
Mario Sanchez Prada
Comment 2
2013-09-20 07:51:22 PDT
Comment on
attachment 212162
[details]
Patch We are probably changing this aria-invalid mapping in the near future to be exposed as a text attribute instead of an object attribute, but for the time being I guess it's better to be consistent with WK1 and DRT. Thanks
WebKit Commit Bot
Comment 3
2013-09-20 08:20:30 PDT
Comment on
attachment 212162
[details]
Patch Clearing flags on attachment: 212162 Committed
r156165
: <
http://trac.webkit.org/changeset/156165
>
WebKit Commit Bot
Comment 4
2013-09-20 08:20:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug