[ATK][WTR] accessibility/aria-invalid.html times out https://bugs.webkit.org/show_bug.cgi?id=121668

Patch by Denis Nomiyama <d.nomiyama@samsung.com> on 2013-09-20
Reviewed by Mario Sanchez Prada.

Tools:

Fixed WTR::AccessibilityUIElement::stringAttributeValue() to return
false in case of aria-invalid event with empty value.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::stringAttributeValue): Returns false in
case of aria-invalid event with empty value.

LayoutTests:

Updated the expectation of aria-invalid.html test, which was timing out
before bug 120421 and this fix.

* platform/gtk-wk2/TestExpectations: Removed aria-invalid.html because
it now passes with this fix and the patch from bug 120421.

Canonical link: https://commits.webkit.org/139680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156165 268f45cc-cd09-0410-ab3c-d52691b4dbfc